--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -20,7 +20,7 @@ $active_background: transparent linear-gradient(180deg, #FD4965 0%, #FD7363 100%
 .app-header{
     // height: 80px;
     width: 100%;
-    position: fixed;
+    // position: fixed;
     z-index: 10;
     display: flex;
     box-shadow: 0 3px 6px #29292919;
