--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1200,3 +1200,7 @@ span.dropdown-multiselect--active{
 .selected-list .c-list .c-token {
     padding: 0% !important;
 }
+
+.fit-content{
+    min-width: fit-content;
+}
